re-running the model to reduce the recall of the model

--- a/notebooks/01_data_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing.ipynb
@@ -307,6 +307,29 @@
      "output_type": "stream",
      "text": [
       "Class distribution of status_group:\n",
+      "functional                 32259\n",
+      "non functional             22824\n",
+      "functional needs repair     4317\n",
+      "Name: status_group, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check class distribution in y_train\n",
+    "print(\"Class distribution of status_group:\")\n",
+    "print(df['status_group'].value_counts(normalize=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class distribution of status_group:\n",
       "functional                 0.543081\n",
       "non functional             0.384242\n",
       "functional needs repair    0.072677\n",
@@ -329,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +482,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +512,7 @@
        "Name: public_meeting, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +567,7 @@
        "1.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +596,7 @@
        "Name: permit, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +651,7 @@
        "1.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +957,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +985,7 @@
     "        # Apply TargetEncoder for columns with more than 6 unique values\n",
     "        X_train[col] = target_encoder.fit_transform(X_train[col], y_train)\n",
     "        X_test[col] = target_encoder.transform(X_test[col])\n",
-    "        pickle.dump(target_encoder, open(f\"model_objects/{col}_target_encoder.pickle\", 'wb'))\n",
+    "        pickle.dump(target_encoder, open(f\"model_objects/{col}_target_encoder.pkl\", 'wb'))\n",
     "                \n",
     "# Display the DataFrame to check the results\n",
     "X_train.head()\n"
@@ -984,251 +1007,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>amount_tsh</th>\n",
-       "      <th>gps_height</th>\n",
-       "      <th>population</th>\n",
-       "      <th>basin</th>\n",
-       "      <th>region</th>\n",
-       "      <th>extraction_type_class</th>\n",
-       "      <th>payment_type</th>\n",
-       "      <th>source_type</th>\n",
-       "      <th>waterpoint_type</th>\n",
-       "      <th>installer_type</th>\n",
-       "      <th>...</th>\n",
-       "      <th>quantity_group_unknown</th>\n",
-       "      <th>funder_type_individualother</th>\n",
-       "      <th>funder_type_international aid</th>\n",
-       "      <th>funder_type_ngo</th>\n",
-       "      <th>funder_type_private companies</th>\n",
-       "      <th>funder_type_religious organizations</th>\n",
-       "      <th>scheme_management_grouped_government</th>\n",
-       "      <th>scheme_management_grouped_other</th>\n",
-       "      <th>scheme_management_grouped_private sector</th>\n",
-       "      <th>scheme_management_grouped_water board</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3607</th>\n",
-       "      <td>-0.084999</td>\n",
-       "      <td>2.053863</td>\n",
-       "      <td>-0.041306</td>\n",
-       "      <td>-0.540016</td>\n",
-       "      <td>-0.633090</td>\n",
-       "      <td>-0.521411</td>\n",
-       "      <td>-0.897587</td>\n",
-       "      <td>-1.112570</td>\n",
-       "      <td>-0.510890</td>\n",
-       "      <td>-0.005208</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50870</th>\n",
-       "      <td>-0.100621</td>\n",
-       "      <td>-0.965049</td>\n",
-       "      <td>-0.379739</td>\n",
-       "      <td>-0.540016</td>\n",
-       "      <td>0.555492</td>\n",
-       "      <td>-0.463637</td>\n",
-       "      <td>0.771866</td>\n",
-       "      <td>0.850673</td>\n",
-       "      <td>-0.359301</td>\n",
-       "      <td>3.266280</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20413</th>\n",
-       "      <td>-0.100621</td>\n",
-       "      <td>-0.965049</td>\n",
-       "      <td>-0.379739</td>\n",
-       "      <td>1.471270</td>\n",
-       "      <td>0.131062</td>\n",
-       "      <td>2.617222</td>\n",
-       "      <td>0.771866</td>\n",
-       "      <td>0.850673</td>\n",
-       "      <td>2.622191</td>\n",
-       "      <td>-0.005208</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52806</th>\n",
-       "      <td>-0.100621</td>\n",
-       "      <td>-0.965049</td>\n",
-       "      <td>-0.379739</td>\n",
-       "      <td>-1.053126</td>\n",
-       "      <td>0.131062</td>\n",
-       "      <td>-0.521411</td>\n",
-       "      <td>-1.330306</td>\n",
-       "      <td>-0.540840</td>\n",
-       "      <td>-0.510890</td>\n",
-       "      <td>-0.005208</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50091</th>\n",
-       "      <td>-0.006889</td>\n",
-       "      <td>0.511216</td>\n",
-       "      <td>-0.125914</td>\n",
-       "      <td>0.697368</td>\n",
-       "      <td>0.135714</td>\n",
-       "      <td>2.617222</td>\n",
-       "      <td>-0.641415</td>\n",
-       "      <td>0.850673</td>\n",
-       "      <td>2.622191</td>\n",
-       "      <td>-0.005208</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 34 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       amount_tsh  gps_height  population     basin    region  \\\n",
-       "3607    -0.084999    2.053863   -0.041306 -0.540016 -0.633090   \n",
-       "50870   -0.100621   -0.965049   -0.379739 -0.540016  0.555492   \n",
-       "20413   -0.100621   -0.965049   -0.379739  1.471270  0.131062   \n",
-       "52806   -0.100621   -0.965049   -0.379739 -1.053126  0.131062   \n",
-       "50091   -0.006889    0.511216   -0.125914  0.697368  0.135714   \n",
-       "\n",
-       "       extraction_type_class  payment_type  source_type  waterpoint_type  \\\n",
-       "3607               -0.521411     -0.897587    -1.112570        -0.510890   \n",
-       "50870              -0.463637      0.771866     0.850673        -0.359301   \n",
-       "20413               2.617222      0.771866     0.850673         2.622191   \n",
-       "52806              -0.521411     -1.330306    -0.540840        -0.510890   \n",
-       "50091               2.617222     -0.641415     0.850673         2.622191   \n",
-       "\n",
-       "       installer_type  ...  quantity_group_unknown  \\\n",
-       "3607        -0.005208  ...                       0   \n",
-       "50870        3.266280  ...                       0   \n",
-       "20413       -0.005208  ...                       0   \n",
-       "52806       -0.005208  ...                       0   \n",
-       "50091       -0.005208  ...                       0   \n",
-       "\n",
-       "       funder_type_individualother  funder_type_international aid  \\\n",
-       "3607                             1                              0   \n",
-       "50870                            1                              0   \n",
-       "20413                            1                              0   \n",
-       "52806                            0                              1   \n",
-       "50091                            1                              0   \n",
-       "\n",
-       "       funder_type_ngo  funder_type_private companies  \\\n",
-       "3607                 0                              0   \n",
-       "50870                0                              0   \n",
-       "20413                0                              0   \n",
-       "52806                0                              0   \n",
-       "50091                0                              0   \n",
-       "\n",
-       "       funder_type_religious organizations  \\\n",
-       "3607                                     0   \n",
-       "50870                                    0   \n",
-       "20413                                    0   \n",
-       "52806                                    0   \n",
-       "50091                                    0   \n",
-       "\n",
-       "       scheme_management_grouped_government  scheme_management_grouped_other  \\\n",
-       "3607                                      0                                0   \n",
-       "50870                                     1                                0   \n",
-       "20413                                     1                                0   \n",
-       "52806                                     1                                0   \n",
-       "50091                                     1                                0   \n",
-       "\n",
-       "       scheme_management_grouped_private sector  \\\n",
-       "3607                                          0   \n",
-       "50870                                         0   \n",
-       "20413                                         0   \n",
-       "52806                                         0   \n",
-       "50091                                         0   \n",
-       "\n",
-       "       scheme_management_grouped_water board  \n",
-       "3607                                       1  \n",
-       "50870                                      0  \n",
-       "20413                                      0  \n",
-       "52806                                      0  \n",
-       "50091                                      0  \n",
-       "\n",
-       "[5 rows x 34 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Capture numerical columns\n",
     "numerical_columns = X_train.select_dtypes(include=['int64', 'float64']).columns\n",
@@ -1242,7 +1023,7 @@
     "X_train[numerical_columns] = scaler.transform(X_train[numerical_columns])\n",
     "\n",
     "# Save the fitted variables\n",
-    "pickle.dump(scaler, open(f\"model_objects/numerical_columns_scaler.pickle\", 'wb'))\n",
+    "pickle.dump(scaler, open(f\"model_objects/numerical_columns_scaler.pkl\", 'wb'))\n",
     "\n",
     "# Display the DataFrame to check the results\n",
     "X_train.head()"
@@ -1250,7 +1031,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['amount_tsh', 'gps_height', 'population', 'basin', 'region',\n",
+       "       'extraction_type_class', 'payment_type', 'source_type',\n",
+       "       'waterpoint_type', 'installer_type'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train[numerical_columns].columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1320,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1973,7 +1777,7 @@
        "[59400 rows x 36 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1999,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
