updating all the notebooks, the readme, and the pdf presentation. Discovered an error input in cell 10 of notebook 02. In line 9, the input variable inside the where function was not the right one, it should be y_pred_proba_best_tree and not y_pred_prob_best_tree. Re-running everything improved the false negative rate considerably, taking it down from 35% to 20%.

--- a/notebooks/01_data_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing.ipynb
@@ -1007,9 +1007,251 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount_tsh</th>\n",
+       "      <th>gps_height</th>\n",
+       "      <th>population</th>\n",
+       "      <th>basin</th>\n",
+       "      <th>region</th>\n",
+       "      <th>extraction_type_class</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>source_type</th>\n",
+       "      <th>waterpoint_type</th>\n",
+       "      <th>installer_type</th>\n",
+       "      <th>...</th>\n",
+       "      <th>quantity_group_unknown</th>\n",
+       "      <th>funder_type_individualother</th>\n",
+       "      <th>funder_type_international aid</th>\n",
+       "      <th>funder_type_ngo</th>\n",
+       "      <th>funder_type_private companies</th>\n",
+       "      <th>funder_type_religious organizations</th>\n",
+       "      <th>scheme_management_grouped_government</th>\n",
+       "      <th>scheme_management_grouped_other</th>\n",
+       "      <th>scheme_management_grouped_private sector</th>\n",
+       "      <th>scheme_management_grouped_water board</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3607</th>\n",
+       "      <td>-0.084999</td>\n",
+       "      <td>2.053863</td>\n",
+       "      <td>-0.041306</td>\n",
+       "      <td>-0.540016</td>\n",
+       "      <td>-0.633090</td>\n",
+       "      <td>-0.521411</td>\n",
+       "      <td>-0.897587</td>\n",
+       "      <td>-1.112570</td>\n",
+       "      <td>-0.510890</td>\n",
+       "      <td>-0.005208</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50870</th>\n",
+       "      <td>-0.100621</td>\n",
+       "      <td>-0.965049</td>\n",
+       "      <td>-0.379739</td>\n",
+       "      <td>-0.540016</td>\n",
+       "      <td>0.555492</td>\n",
+       "      <td>-0.463637</td>\n",
+       "      <td>0.771866</td>\n",
+       "      <td>0.850673</td>\n",
+       "      <td>-0.359301</td>\n",
+       "      <td>3.266280</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20413</th>\n",
+       "      <td>-0.100621</td>\n",
+       "      <td>-0.965049</td>\n",
+       "      <td>-0.379739</td>\n",
+       "      <td>1.471270</td>\n",
+       "      <td>0.131062</td>\n",
+       "      <td>2.617222</td>\n",
+       "      <td>0.771866</td>\n",
+       "      <td>0.850673</td>\n",
+       "      <td>2.622191</td>\n",
+       "      <td>-0.005208</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52806</th>\n",
+       "      <td>-0.100621</td>\n",
+       "      <td>-0.965049</td>\n",
+       "      <td>-0.379739</td>\n",
+       "      <td>-1.053126</td>\n",
+       "      <td>0.131062</td>\n",
+       "      <td>-0.521411</td>\n",
+       "      <td>-1.330306</td>\n",
+       "      <td>-0.540840</td>\n",
+       "      <td>-0.510890</td>\n",
+       "      <td>-0.005208</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50091</th>\n",
+       "      <td>-0.006889</td>\n",
+       "      <td>0.511216</td>\n",
+       "      <td>-0.125914</td>\n",
+       "      <td>0.697368</td>\n",
+       "      <td>0.135714</td>\n",
+       "      <td>2.617222</td>\n",
+       "      <td>-0.641415</td>\n",
+       "      <td>0.850673</td>\n",
+       "      <td>2.622191</td>\n",
+       "      <td>-0.005208</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 34 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       amount_tsh  gps_height  population     basin    region  \\\n",
+       "3607    -0.084999    2.053863   -0.041306 -0.540016 -0.633090   \n",
+       "50870   -0.100621   -0.965049   -0.379739 -0.540016  0.555492   \n",
+       "20413   -0.100621   -0.965049   -0.379739  1.471270  0.131062   \n",
+       "52806   -0.100621   -0.965049   -0.379739 -1.053126  0.131062   \n",
+       "50091   -0.006889    0.511216   -0.125914  0.697368  0.135714   \n",
+       "\n",
+       "       extraction_type_class  payment_type  source_type  waterpoint_type  \\\n",
+       "3607               -0.521411     -0.897587    -1.112570        -0.510890   \n",
+       "50870              -0.463637      0.771866     0.850673        -0.359301   \n",
+       "20413               2.617222      0.771866     0.850673         2.622191   \n",
+       "52806              -0.521411     -1.330306    -0.540840        -0.510890   \n",
+       "50091               2.617222     -0.641415     0.850673         2.622191   \n",
+       "\n",
+       "       installer_type  ...  quantity_group_unknown  \\\n",
+       "3607        -0.005208  ...                       0   \n",
+       "50870        3.266280  ...                       0   \n",
+       "20413       -0.005208  ...                       0   \n",
+       "52806       -0.005208  ...                       0   \n",
+       "50091       -0.005208  ...                       0   \n",
+       "\n",
+       "       funder_type_individualother  funder_type_international aid  \\\n",
+       "3607                             1                              0   \n",
+       "50870                            1                              0   \n",
+       "20413                            1                              0   \n",
+       "52806                            0                              1   \n",
+       "50091                            1                              0   \n",
+       "\n",
+       "       funder_type_ngo  funder_type_private companies  \\\n",
+       "3607                 0                              0   \n",
+       "50870                0                              0   \n",
+       "20413                0                              0   \n",
+       "52806                0                              0   \n",
+       "50091                0                              0   \n",
+       "\n",
+       "       funder_type_religious organizations  \\\n",
+       "3607                                     0   \n",
+       "50870                                    0   \n",
+       "20413                                    0   \n",
+       "52806                                    0   \n",
+       "50091                                    0   \n",
+       "\n",
+       "       scheme_management_grouped_government  scheme_management_grouped_other  \\\n",
+       "3607                                      0                                0   \n",
+       "50870                                     1                                0   \n",
+       "20413                                     1                                0   \n",
+       "52806                                     1                                0   \n",
+       "50091                                     1                                0   \n",
+       "\n",
+       "       scheme_management_grouped_private sector  \\\n",
+       "3607                                          0   \n",
+       "50870                                         0   \n",
+       "20413                                         0   \n",
+       "52806                                         0   \n",
+       "50091                                         0   \n",
+       "\n",
+       "       scheme_management_grouped_water board  \n",
+       "3607                                       1  \n",
+       "50870                                      0  \n",
+       "20413                                      0  \n",
+       "52806                                      0  \n",
+       "50091                                      0  \n",
+       "\n",
+       "[5 rows x 34 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Capture numerical columns\n",
     "numerical_columns = X_train.select_dtypes(include=['int64', 'float64']).columns\n",
@@ -1031,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1285,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
